--- a/report/example.tex
+++ b/report/example.tex
@@ -596,8 +596,24 @@ Our system will also require some debugging to iron out issues and keep it fit f
 %==============================================================================
 \section{Contributions}
 \subsection{Arthur Bigeard}
+\label{Arthur:Con}
+\begin{itemize}
+\item Writing specifications and planning for the project
+\item First steps with the TimingFramework : prototyping an array animation
+\item Implementing a first Step management system for the array animation prototype in a Step.java class
+\item Creating a Github repository for the team project
+\item Implementing an ArrayAnimated class called in a Main class.
+\item Enabling the user to dynamically change the speed of the animation
+\item Determining the best solution to code the export animation feature. Have to chose between Javascript and
+Actionscript.
+\item Dynamic window resizing : automatically resizes the animation display as the window containing it is resized.
+Issues
+\item Displaying a track list of animation steps from which the user can straightly choose and jump to.
+\end{itemize}
 \subsection{Alexander Ferguson}
+\label{Alexander:Con}
 \subsection{Andrew Gibson}
+\label{Andrew:Con}
 \begin{itemize}
 	\item Graphics framework research and justifying selection
 	\item Initial framework implementation with animation
