--- a/report/user_manual.tex
+++ b/report/user_manual.tex
@@ -50,7 +50,7 @@ each animated data structure from which you can choose:
 Each data structure has different animation calls which you can use to create your animation steps within your algorithm.
 Every structure support the following calls:
 \begin{itemize}
-\item swap: takes the indexes of two elements to swap and a String to label the step
+\item swap: takes the indexes of two elements to swap and a String to label the step. Attention: The LinkedList doesn't support this call.
 \item setColor: takes the index of the element changing color, a Color ENUM value and a String to label the step
 \item setInfo: takes a parameter String to display as an animation information
 \item setTime: takes a parameter Integer (expressing milliseconds) to set the speed of the next step created
