even more changes

--- a/report/example.tex
+++ b/report/example.tex
@@ -219,7 +219,7 @@ Look at Appendix \ref{}
 
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 \section{Problems Encountered}
-\subsection{Arthur Bigeard}
+\subsection{Dynamic features}
 Once our team got familiar with the TimingFramework, the application started rapidly growing and quickly our first animated algorithms were produced. 
 On early stages of the animation display, we figured several features should be added to the display to increase the potential of our animations, features including:
 \begin{itemize}
@@ -522,6 +522,7 @@ Actionscript.
 \item Dynamic window resizing : automatically resizes the animation display as the window containing it is resized.
 Issues
 \item Displaying a track list of animation steps from which the user can straightly choose and jump to.
+\item Writing the Design section of the report, as well as the User manual and the Dynamic Features subsection of the Issues section
 \end{itemize}
 \subsection{Alexander Ferguson}
 \label{Alexander:Con}
