--- a/report/figures/swap.tex
+++ b/report/figures/swap.tex
@@ -27,22 +27,30 @@ s.getLastAnimator().addTarget(PropertySetter.getTarget(rect_list.get(a),
 s.addAnimator(new Animator.Builder().setDuration(time, TimeUnit.MILLISECONDS)
 	.build(), nextBtn); // we want this Animator to start straight after the 
 	// last Animator finishes. This is how it's done just now
-s.getLastAnimator().addTarget(PropertySetter.getTarget(rect_list.get(a), "currentX", rect_list.get(a).getRec().x, rect_list.get(b).getRec().x)); 
+s.getLastAnimator().addTarget(PropertySetter.getTarget(rect_list.get(a), 
+"currentX", rect_list.get(a).getRec().x, rect_list.get(b).getRec().x)); 
 s.addAnimator(new Animator.Builder().setDuration(time, TimeUnit.MILLISECONDS).build(), nextBtn);
-s.getLastAnimator().addTarget(PropertySetter.getTarget(rect_list.get(a), "currentY", rect_list.get(a).getRec().y+rectSpace(), rect_list.get(a).getRec().y));		
+s.getLastAnimator().addTarget(PropertySetter.getTarget(rect_list.get(a),
+ "currentY", rect_list.get(a).getRec().y+rectSpace(), rect_list.get(a).getRec().y));		
 //rect 2
-s.addAnimator(new Animator.Builder().setDuration(time, TimeUnit.MILLISECONDS).build(), s.getFirstAnimator());															// we want this Animator to start the same time the first Animator in the step does
-s.getLastAnimator().addTarget(PropertySetter.getTarget(rect_list.get(b), "currentY", rect_list.get(b).getRec().y, rect_list.get(b).getRec().y-rectSpace()));
+s.addAnimator(new Animator.Builder().setDuration(time,
+ TimeUnit.MILLISECONDS).build(), s.getFirstAnimator());															// we want this Animator to start the same time the first Animator in the step does
+s.getLastAnimator().addTarget(PropertySetter.getTarget(rect_list.get(b),
+ "currentY", rect_list.get(b).getRec().y, rect_list.get(b).getRec().y-rectSpace()));
 s.addAnimator(new Animator.Builder().setDuration(time, TimeUnit.MILLISECONDS).build(), nextBtn);
-s.getLastAnimator().addTarget(PropertySetter.getTarget(rect_list.get(b), "currentX", rect_list.get(b).getRec().x, rect_list.get(a).getRec().x));
+s.getLastAnimator().addTarget(PropertySetter.getTarget(rect_list.get(b),
+ "currentX", rect_list.get(b).getRec().x, rect_list.get(a).getRec().x));
 s.addAnimator(new Animator.Builder().setDuration(time, TimeUnit.MILLISECONDS).build(), nextBtn);
-s.getLastAnimator().addTarget(PropertySetter.getTarget(rect_list.get(b), "currentY", rect_list.get(b).getRec().y-rectSpace(), rect_list.get(b).getRec().y));
+s.getLastAnimator().addTarget(PropertySetter.getTarget(rect_list.get(b),
+ "currentY", rect_list.get(b).getRec().y-rectSpace(), rect_list.get(b).getRec().y));
 // Trigger for a continuous animation
 s.addAnimator(new Animator.Builder().setDuration(1, TimeUnit.MILLISECONDS).build(), nextBtn);
 s.getLastAnimator().addTarget(new ContinuousAnimation(currentStep+1, this));
 // Log the changes in the Step
-s.addChanges(new Change("swap", rect_list.get(a), rect_list.get(a).getRec().x, rect_list.get(a).getRec().y));
-s.addChanges(new Change("swap", rect_list.get(b), rect_list.get(b).getRec().x, rect_list.get(b).getRec().y));
+s.addChanges(new Change("swap", rect_list.get(a),
+ rect_list.get(a).getRec().x, rect_list.get(a).getRec().y));
+s.addChanges(new Change("swap", rect_list.get(b),
+ rect_list.get(b).getRec().x, rect_list.get(b).getRec().y));
 \end{verbatim}
 \end{center}
 \caption{Sample code from the AnimatedArray swap function}
