Minor change in design

--- a/report/example.tex
+++ b/report/example.tex
@@ -217,6 +217,7 @@ The MetaDataManager component provides a set of classes and functions meant to s
 those data through the public animating calls made in the different data structures' classes.
 \subsection{UI Component}
 \includegraphics[width=\textwidth]{images/UIDiagram.png}
+The UI component only consists of one class - setupGUI, which basically creates the whole UI of the built animation. We are using Swing for it.
 %==============================================================================
 \chapter{Implementation}
 \label{impl}
